# code

./: README.md
Algorithm/Algorithm-Basic-C/: README.md
Algorithm/GeekTime-Algorithm-Camp/: README.md  settings.gradle
Algorithm/Play-with-Algorithms-CPP/: README.md
Algorithm/Play-with-Data-Structures-Java/: README.md
Algorithm/Play-with-System-of-Algorithm/: README.md  build.gradle  settings.gradle
Android/: .gitignore
Android/AndroidUpgrade/Android-Jetpack-Latest/: build.gradle
Android/AndroidUpgrade/Android10/: settings.gradle
Android/AndroidUpgrade/AndroidLibsVersionTracker/: settings.gradle
Android/Architecture/AAC-Sample/: settings.gradle
Android/Architecture/IPC-Arch/: README.md
Android/Basic/LauncherDadge/: README.md  settings.gradle
Android/Dynamic/: README.md
Android/NDK/: README.md
Android/NDK/MMKVSimulation/: settings.gradle
Android/NDK/NDK-Build2-GradlExperimental/: README.md
C&CPP/c-imooc-programinc/: README.md
C&CPP/c-program-basic/: CMakeLists.txt  README.md
C&CPP/cpp-program-basic/: CMakeLists.txt
C&CPP/opencv-windows/: CMakeLists.txt  main.cpp
C&CPP/opencv-windows/base/: base_image_process.cpp
DSA/DataStructure-c/: README.md
Flutter/: README.md
Flutter/flutter_basic/: README.md
Java/Java-Basic/: a.c
Java/RxJava/: build.gradle
Kotlin/Kotlin-AndroidX/: build.gradle
Kotlin/Kotlin-Basic/: .gitignore  build.gradle
Kotlin/Kotlin-Imooc/: README.md
Projects/ppjoke/: README.md
Projects/push-im/: README.md
Python/YoudaoNotePuller/: README.md  config.json  main.py  test.py
(+375 files in other folders)
